# workshop-docker-aovivo

./: Dockerfile  app.py  pyproject.toml
