[tool.poetry]
name = "workshop-docker-aovivo"
version = "0.1.0"
description = ""
authors = ["Maik Rodrigues <maikrs007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
